tests/ui/cached_expires_create_exclusive.stderr
error: `expires` and `create` are mutually exclusive — `expires` generates the store constructor automatically
 --> tests/ui/cached_expires_create_exclusive.rs:6:4
  |
6 | fn my_fn(x: u32) -> u32 {
  |    ^^^^^
